examples/valid/09_type_definition.moo

type Foo def 
  Foo(Int)
  Loo(Foo)
end-def

fun main() -> Int do
  return 0
end-main
