examples/invalid/02_wrong_function_end_name.moo
fun main() -> Int do
	return 0
end-maino